refactor(5-SID): reschedule task to 14:00 and fetch current prices at start of the hour